# BrawsProject

./: .clang-format  CMakeLists.txt  README.md
server/: Makefile  (+6 more)
src/: CMakeLists.txt  Duplicator.c
src/BotAPI/: BotInputSystem.cpp  BotInputSystem.h  BotManagement.cpp  BotManagement.h  CMakeLists.txt
src/BotAPI/Bots/: README.md  bot_complex.cpp  bot_default.cpp  bot_primitive.cpp  bot_shooter.cpp
src/Core/: CMakeLists.txt  Camera.cpp  Camera.h  ClientEngine.h  Collider.cpp  Collider.h  Colliders.cpp  Colliders.h  CollisionSystem.cpp  CollisionSystem.h  CustomBehaviour.h  DelayQueue.cpp  DelayQueue.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  GameObject.cpp  GameObject.h  InputSystem.cpp  InputSystem.h  Observer.cpp  Observer.h  Position.cpp  Position.h  Render.cpp  Render.h  ServerEngine.h  Sprites.cpp  Sprites.h  Vector2D.cpp  Vector2D.h  VisibleGameObject.cpp  VisibleGameObject.h
src/Core/Qt/: CMakeLists.txt  VisibleObject.h  main.cpp
src/Core/Qt/Helpers/: BasicHelper.h
src/Core/Qt/Helpers/CommonHelpers/: DrawAnimatedImageHelper.cpp  DrawAnimatedImageHelper.h  DrawRotatedImageHelper.cpp  DrawRotatedImageHelper.h  DrawStaticImageHelper.cpp  DrawStaticImageHelper.h  DrawTextHelper.cpp  DrawTextHelper.h  RotateHelper.cpp  RotateHelper.h
src/Core/Qt/MainWidget/: MainWidget.cpp  MainWidget.h  Render.cpp  Render.h
src/Core/Qt/PaintTemplates/: AnimatedSprite.cpp  AnimatedSprite.h  BasicSprite.cpp  BasicSprite.h  TextSprite.cpp  TextSprite.h  VisibleObject.cpp  VisibleObject.h
src/Core/Qt/Painters/: DummyPainter.h  QtPainter.h
src/Core/Qt/RecourcesInitializer/: RecourcesInitializer.cpp  RecourcesInitializer.h
src/Core/Tools/: Concepts.h  FastHashMaps.h
src/Documentation/Core/: Engine.md  Porter.md
src/Game/: CMakeLists.txt  main.cpp
src/Game/GameClasses/: CommandsList.h  GameObjectTags.h
src/Game/GameClasses/Client/: Dup.c  Launcher.cpp  main.cpp
src/Game/GameClasses/Client/Cerebrates/Characters/: CharacterCerebrateClient.h
src/Game/GameClasses/Client/Cerebrates/HitSynchronizer/: HitSynchronizerCerebrateClient.h
src/Game/GameClasses/Client/Cerebrates/Positional/: PositionalCerebrateClient.h
src/Game/GameClasses/Client/Cerebrates/Zone/: ZoneCerebrateClient.h
src/Game/GameClasses/Client/GameStarters/: GameStarter.cpp  GameStarter.h
src/Game/GameClasses/Client/Pawns/Camera/: Camera.cpp  Camera.h
src/Game/GameClasses/Client/Pawns/Characters/: CharacterPawnClient.cpp  CharacterPawnClient.h
src/Game/GameClasses/Client/Pawns/Particles/: ExplosionParticles.cpp  ExplosionParticles.h  HitParticles.cpp  HitParticles.h  Particles.cpp  Particles.h  PowerUpParticles.cpp  PowerUpParticles.h  SmokeParticles.cpp  SmokeParticles.h
src/Game/GameClasses/Client/Pawns/PowerUps/: DamagePowerUpPawnClient.cpp  DamagePowerUpPawnClient.h  HealthPowerUpPawnClient.cpp  HealthPowerUpPawnClient.h  PowerUpPawnClient.cpp  PowerUpPawnClient.h  SpeedPowerUpPawnClient.cpp  SpeedPowerUpPawnClient.h
src/Game/GameClasses/Client/Pawns/Projectiles/: ProjectilePawnClient.cpp  ProjectilePawnClient.h
src/Game/GameClasses/Client/Pawns/UI/: Cursor.cpp  Cursor.h  EndGameWidget.cpp  EndGameWidget.h
src/Game/GameClasses/Client/Pawns/Zones/: DamageZonePawnClient.cpp  DamageZonePawnClient.h
src/Game/GameClasses/Common/Maps/Map1/: Map1.cpp  Map1.h
src/Game/GameClasses/Server/: main.cpp
src/Game/GameClasses/Server/Cerebrates/Characters/: CharacterCerebrateServer.h
src/Game/GameClasses/Server/Cerebrates/HitSynchronizer/: HitSynchronizerCerebrateServer.h
src/Game/GameClasses/Server/Cerebrates/Positional/: PositionalCerebrateServer.h
src/Game/GameClasses/Server/Cerebrates/Zone/: ZoneCerebrateServer.h
src/Game/GameClasses/Server/GameRulers/: GameRuler.cpp  GameRuler.h
src/Game/GameClasses/Server/ParsingUtilities/: ControllerTools.h
src/Game/Resources/: ResourcesPaths.h
src/Game/Resources/Maps/LudusMap/: LudusMapResources.h
src/Game/Resources/Particles/: Smoke.png~
src/Game/Tools/: ClientGameManagement.cpp  ClientGameManagement.h  ControllerTools.cpp  ControllerTools.h  GameManagementTools.cpp  InputManagement.cpp  InputManagement.h  ServerGameManagement.cpp  ServerGameManagement.h
src/Game/Tools/Decoy/: ServerDecoy.cpp  ServerDecoy.h
src/Gui/: CMakeLists.txt  Screens.h  mainwindow.cpp  mainwindow.h
src/Gui/ScreenClasses/: ControlModeScreen.cpp  ControlModeScreen.h  HeroScreen.cpp  StartScreen.cpp
src/Gui/test_build/: CMakeCache.txt  Gui  Makefile  cmake_install.cmake
src/Gui/test_build/Gui_autogen/: mocs_compilation.cpp
src/Gui/test_build/Gui_autogen/BRWSNPSVLE/: moc_ControlModeScreen.cpp  moc_HeroScreen.cpp  moc_StartScreen.cpp
src/Gui2/: CMakeLists.txt  GameInfo.h  main.cpp  mainwindow.cpp  mainwindow.h
src/Gui2/ScreenClasses/: ControlModeScreen.cpp  ControlModeScreen.h  HeroScreen.cpp  HeroScreen.h  LoadScreen.cpp  LoadScreen.h  StartScreen.cpp  StartScreen.h
src/Infrastructure/: BindSocket.c  CMakeLists.txt
src/Infrastructure/Client/: Communicator.cpp  Communicator.h
src/Infrastructure/Server/: Communicator.cpp  Communicator.h
src/NormInfrastructure/: CMakeLists.txt  GameInfo.h  GameInfo.json
src/NormInfrastructure/Client/: Agent.cpp  Agent.h  CMakeLists.txt  Communicator.cpp  Communicator.h  a.out  client  client.cpp  main.cpp
src/NormInfrastructure/Server/: CMakeLists.txt  Communicator.cpp  Communicator.h  Porter.cpp  Porter.h  a.out  main.cpp  server
src/ServerInfrastructure/Lobby/: Lobby.h
src/ServerInfrastructure/RegManager/: Agent.cpp  Agent.h  Communicator.h  GameInfo.h  Porter.cpp  Porter.h  client.cpp  main.cpp
src/SwarmSystem/: CMakeLists.txt  Cerebrate.cpp  Cerebrate.h  Overmind.cpp  Overmind.h  Register.h  Serializer.h  TypeIdList.h
src/SwarmSystem/Profiler/: Profiler.cpp  Profiler.h
test/: CMakeLists.txt
test/libtest/: CMakeLists.txt  test.cpp
test/test_Vector2D/: CMakeLists.txt  test.cpp
test/test_basic_sequencer/: CMakeLists.txt  test.cpp
test/test_colliders/: CMakeLists.txt  test.cpp
test/test_delay_queue/: CMakeLists.txt  test.cpp
test/test_event_handler/: CMakeLists.txt  test.cpp
(+174 files in other folders)
