add_library(geometry_lib ../Game/Core/Tools/BasicGeometry.cpp)
add_library(vector_lib ../Game/Core/Vector2D.cpp)
add_library(colliders_lib ../Game/Core/Colliders.cpp ../../Game/Core/Collider.cpp ../../Game/Core/Position.cpp)
add_library(delay_queue_lib ../Game/Core/DelayQueue.cpp)
add_library(event_handler_lib ../Game/Core/EventHandler.cpp)
add_library(sprites_lib ../Game/Core/Sprites.cpp)

add_subdirectory(libtest)
add_subdirectory(test_Vector2D)
add_subdirectory(test_colliders)
add_subdirectory(test_delay_queue)
add_subdirectory(test_event_handler)
add_subdirectory(test_basic_sequencer)